wled00/data/index.css
/* ... */
#Segments, #Presets, #Effects, #Colors {
	font-size: 19px;
	padding: 10px 0 0;
}

#segutil, #segutil2, #segcont, #putil, #pcont, #pql, #palw, #bsp,
.fnd {
	max-width: 280px;
}

#putil, #segutil, #segutil2, #bsp {
	min-height: 42px;
	margin: 0 auto;
}

#segutil .segin {
	padding-top: 12px;
}

#fx, #pql, #segcont, #pcont, #sliders, #qcs-w, #hexw, #pall, #ledmap,
.slider, .filter, .option, .segname, .pname, .fnd {
	margin: 0 auto;
}

/* Constrain Colors, Effects, Favorites tabs to 280px and left-align */
#Colors #qcs-w,
#Colors #hexw,
#Colors #rwrap,
#Colors #gwrap,
#Colors #bwrap,
#Colors #wwrap,
#Colors #kwrap,
#Colors #wbal,
#Colors #sliders,
#Colors .slider,
#Effects #fxFind,
#Effects #fx,
#Effects #fxlist,
#Effects #sliders,
#Effects .slider,
#Favourites #pql,
#Favourites #palw,
#Favourites #sliders,
#Favourites .slider {
	margin: 0;
	max-width: 280px;
}

/* Ensure list items in these tabs are 280px width */
#Effects #fxlist .lstI,
#Colours #csl button {
	width: 100%;
}

#colorsInfoPanel, #fxInfoPanel, #presetsInfoPanel {
	max-width: 280px;
	margin: 10px auto 2vh auto !important;
}

#putil {
	padding: 5px 0 0;
}

/* Quick load magin for simplified UI */
.simplified #pql, .simplified #palw, .simplified #fx {
	margin-bottom: 8px;
}

.smooth { transition: transform	calc(var(--f, 1)*.5s) ease-out }

.tab-label {
	margin: 0 0 -5px 0;
	padding-bottom: 4px;
	display: var(--bhd);
}

.overlay {
	position: fixed;
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	background-color: var(--c-3);
	font-size: 24px;
	display: flex;
	align-items: center;
	justify-content: center;
	z-index: 11;
	opacity: .95;
	transition: .7s;
	pointer-events: none;
}

.staytop, .staybot {
	display: block;
	position: -webkit-sticky;
	position: sticky !important;
	top: 0;
	z-index: 2;
	margin: 0 auto auto;
}

.staybot {
	bottom: 5px;
}

#sliders {
	position: -webkit-sticky;
	position: sticky;
	bottom: 0;
	max-width: 280px;
	z-index: 2;
	padding-bottom: 6px;
}

#sliders .labels {
	padding-top: 3px;
	font-size: small;
}

.slider {
	/*max-width: 300px;*/
	/* margin: 5px auto; add 5px; if you want some vertical space but looks ugly */
	border-radius: 24px;
	position: relative;
	padding-bottom: 2px;
}

/* Slider wrapper div */
.sliderwrap {
	height: 30px;
	width: 230px;
	max-width: 230px;
	position: relative;
	z-index: 0;
}

#sliders .slider {
	padding-right: 64px; /* offset for bubble */
}

#sliders .slider, #info .slider {
	background-color: var(--c-2);
}

#sliders .sliderwrap, .sbs .sliderwrap {
	left: 32px; /* offset for icon */
}

.filter, .option {
	background-color: var(--c-4);
	border-radius: 26px;
	height: 26px;
	max-width: 300px;
	/* margin: 0 auto 4px; add 4-8px if you want space at the bottom */
	padding: 4px 2px;
	position: relative;
	opacity: 1;
	transition: opacity .25s linear, height .2s, transform .2s;
}

.filter {
	z-index: 1;
	/*overflow: visible;*/
	border-radius: 0 0 16px 16px;
	max-width: 220px;
	height: 54px;
	line-height: 1.5;
	padding-bottom: 8px;
	pointer-events: none;
}

/* New tooltip */
.tooltip {
	position: absolute;
	opacity: 0;
	visibility: hidden;
	transition: opacity .25s ease, visibility .25s ease;
	background-color: var(--c-5);
	box-shadow: 4px 4px 10px 4px var(--c-1);
	color: var(--c-f);
	text-align: center;
	padding: 8px 16px;
	border-radius: 6px;
	z-index: 1;
	pointer-events: none;
}

 .tooltip::after {
	content: "";
	position: absolute;
	border: 8px solid;
	border-color: var(--c-5) transparent transparent transparent;
	top: 100%;
	left: calc(50% - 8px);
	z-index: 0;
 }

.tooltip.visible {
	opacity: 1;
	visibility: visible;
}

.fade {
	visibility: hidden; /* hide it */
	opacity: 0; /* make it transparent */
	transform: scaleY(0); /* shrink content */
	height: 0; /* force other elements to move */
	padding: 0; /* remove empty space */
}

.first {
	margin-top: 10px;
}

#toast {
	opacity: 0;
	background-color: #ffe066;
	border: 1px solid var(--c-2);
	max-width: 90%;
	color: #333;
	text-align: center;
	border-radius: 5px;
	padding: 22px;
	position: fixed;
	z-index: 5;
	left: 50%;
	transform: translateX(-50%);
	bottom: calc(var(--bh) + 22px);
	font-size: 17px;
	pointer-events: none;
}

#toast.show {
	opacity: 1;
	animation: fadein .5s, fadein .5s 3s reverse forwards;
}

#toast.error {
	opacity: 1;
	background-color: #b21;
	color: var(--c-f);
	animation: fadein .5s;
}

.modal {
	position: fixed;
	left: 0;
	bottom: 0;
	right: 0;
	top: calc(var(--th) - 1px);
	background-color: var(--c-o);
	transform: translateY(100%);
	transition: transform .4s;
	padding: 8px;
	font-size: 20px;
	overflow: auto;
	touch-action: pan-y;
	overscroll-behavior: none;
}

.close {
	position: -webkit-sticky;
	position: sticky;
	top: 0;
	float: right;
}

#info, #nodes {
	z-index: 4;
}

#rover {
	z-index: 3;
}

#rover .ibtn {
	margin: 5px;
}

#ndlt {
	margin: 12px 0;
}

#roverstar {
	position: fixed;
	top: calc(var(--th) + 5px);
	left: 1px;
	cursor: pointer;
}

#connind {
	position: fixed;
	bottom: calc(var(--bh) + 5px);
	left: 4px;
	padding: 5px;
	border-radius: 5px;
	background-color: #a90;
	z-index: -2;
}

#info .slider {
	max-width: 200px;
	min-width: 145px;
	float: right;
	margin: 0;
}
#info .sliderwrap {
	width: 200px;
}

#info table, #nodes table {
	table-layout: fixed;
	width: 100%;
}

#info td, #nodes td {
  padding-bottom: 8px;
}

#info .ibtn {
	margin: 5px;
}

#info div, #nodes div {
	max-width: 490px;
	margin: 0 auto;
}

#info #imgw {
	margin: 8px auto;
}

#lv {
	max-width: 600px;
	display: inline-block;
}

#heart {
	transition: color .9s;
	font-size: 16px;
	color: #f00;
}

img {
	max-width: 100%;
	max-height: 100%;
}

.wi {
	image-rendering: pixelated;
	image-rendering: crisp-edges;
	width: 210px;
}

@keyframes fadein {
	from {bottom: 0; opacity: 0;}
	to {bottom: calc(var(--bh) + 22px); opacity: 1;}
}

.sliderdisplay {
	content:'';
	position: absolute;
	top: 12px; left: 8px; right: 8px;
	height: 5px;
	background: var(--c-4);
	border-radius: 16px;
	pointer-events: none;
	z-index: -1;
	--bg: var(--c-f);
}
/* ... */

